Fixed overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -184,9 +184,6 @@ body {
 }
 
 #szamologep {
-    display: grid;
-    grid-template-rows: 200px 1fr 1fr;
-    height: 100vh;
     align-items: center;
     justify-items: center;
 
@@ -221,6 +218,8 @@ body {
         height: 400px;
         border-radius: 15px;
         margin: 20px;
+        display: block;
+        margin-left: auto; margin-right: auto;
     }
 
     .text-section3 {
@@ -254,9 +253,6 @@ body {
 }
 
 #analitikus {
-    display: grid;
-    grid-template-rows: 200px 1fr 1fr;
-    height: 100vh;
     align-items: center;
     justify-items: center;
 
@@ -291,6 +287,8 @@ body {
 
     img {
         width: 840px;
+        display: block;
+        margin-left: auto; margin-right: auto;
     }
 
     .text-section4 {
@@ -326,9 +324,6 @@ body {
 }
 
 #huszszazad {
-    display: grid;
-    grid-template-rows: 200px 1fr 1fr;
-    height: 100vh;
     align-items: center;
     justify-items: center;
 
@@ -368,6 +363,7 @@ body {
         grid-template-rows: 100px 1fr;
         align-self: baseline;
         justify-self: baseline;
+        position: relative;
         z-index: 2;
 
         h1 {
@@ -403,33 +399,16 @@ body {
             justify-self: end;
         }
 
-        .aiken:hover {
-            transform: scale(1.1);
-            transform-origin: 50% 100%;
-            transition: 300ms ease-in-out;
-        }
-
         .neumann {
             align-self: center;
             justify-self: center;
+            position: relative;
             z-index: 1;
-        }
-
-        .neumann:hover {
-            transform: scale(1.1);
-            transform-origin: 50% 100%;
-            transition: 300ms ease-in-out;
         }
 
         .alan {
             align-self: self-start;
             justify-self: start;
-        }
-
-        .alan:hover {
-            transform: scale(1.1);
-            transform-origin: 50% 100%;
-            transition: 300ms ease-in-out;
         }
     }
 }
@@ -482,6 +461,7 @@ body {
     justify-items: center;
     color: white;
     overflow: hidden;
+    overlay: none;
 
     h1 {
         font-family: "Bebas Neue", sans-serif;
